# Grok4Git

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
grok4git/: __init__.py  chat.py  commands.py  config.py  github_api.py  main.py  peer_review.py  tools.py
tests/: __init__.py  conftest.py  test_commands.py  test_config.py  test_github_api.py  test_tools.py
