[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "grok4git"
dynamic = ["version"]
description = "AI-powered GitHub repository management tool using Grok AI"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Oliver Baumgart", email = "oliver@hypercoherence.com"}
]
maintainers = [
    {name = "Oliver Baumgart", email = "oliver@hypercoherence.com"}
]
keywords = [
    "github",
    "ai",
    "grok",
    "git",
    "repository",
    "management",
    "cli",
    "natural-language",
    "automation",
    "xai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.40.6",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "prompt-toolkit>=3.0.47"
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0"
]

[project.urls]
Homepage = "https://github.com/HyperCoherence/Grok4Git"
Documentation = "https://github.com/HyperCoherence/Grok4Git#readme"
Repository = "https://github.com/HyperCoherence/Grok4Git.git"
"Bug Tracker" = "https://github.com/HyperCoherence/Grok4Git/issues"
Changelog = "https://github.com/HyperCoherence/Grok4Git/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/HyperCoherence/Grok4Git"
"Twitter" = "https://twitter.com/OliverBaumgart"

[project.scripts]
grok4git = "grok4git.main:main"

[tool.setuptools]
packages = ["grok4git"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

# Setuptools-scm configuration
[tool.setuptools_scm]
fallback_version = "0.1.0"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "openai.*",
    "rich.*",
    "prompt_toolkit.*"
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, E501"

 